--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -1303,6 +1303,86 @@
    "source": [
     "**20.Voyez-vous un “director” ayant produit plus d’une œuvre ?**\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Directeurs ayant produit plus d'une œuvre :\n",
+      "director\n",
+      "Rajiv Chilaka                 19\n",
+      "Raúl Campos, Jan Suter        18\n",
+      "Marcus Raboy                  16\n",
+      "Suhas Kadav                   16\n",
+      "Jay Karas                     14\n",
+      "                              ..\n",
+      "Abhijit Panse                  2\n",
+      "Jose Manuel Colón              2\n",
+      "Rhys Thomas                    2\n",
+      "Rizal Mantovani                2\n",
+      "Nawapol Thamrongrattanarit     2\n",
+      "Name: count, Length: 867, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compter le nombre d'œuvres produites par chaque directeur\n",
+    "directors_count = df['director'].value_counts()\n",
+    "\n",
+    "# Filtrer les directeurs ayant produit plus d'une œuvre\n",
+    "prolific_directors = directors_count[directors_count > 1]\n",
+    "\n",
+    "if not prolific_directors.empty:\n",
+    "    print(\"Directeurs ayant produit plus d'une œuvre :\")\n",
+    "    print(prolific_directors)\n",
+    "else:\n",
+    "    print(\"Aucun directeur n'a produit plus d'une œuvre.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**21. Quelle est l’année avec le plus de films ajoutés au catalogue de Netflix\n",
+    "?**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Année comptant le plus d'ajout au catalogue' : 2018\n",
+      "Nombre d'ajout au catalogue cette année là : 1147\n"
+     ]
+    }
+   ],
+   "source": [
+    "prolific_years = df['release_year'].value_counts()\n",
+    "\n",
+    "# Trouver l'année avec le plus de films ajoutés\n",
+    "most_prolific_year = prolific_years.idxmax()\n",
+    "number_of_films = prolific_years.max()\n",
+    "\n",
+    "print(f\"Année comptant le plus d'ajout au catalogue' : {most_prolific_year}\")\n",
+    "print(f\"Nombre d'ajout au catalogue cette année là : {number_of_films}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
