--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -1378,6 +1378,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**22.Quelle est l’année avec le plus de séries ajoutées au catalogue de\n",
+    "Netflix ?**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 72,
    "metadata": {},
@@ -1407,7 +1415,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualisation\n",
+    "**23.Visualisation**\n",
     "### a. La répartition du type d'oeuvres du dataset.\n"
    ]
   },
