[Modifier code du 16] [Modifier Markdown du 16]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,6 +204,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 10\n",
+    "**Explanation** \n",
+    "1. `missing_data = df.isnull().sum()`\n",
+    "    - Creates a series `missing_data` with missing values per column.\n",
+    "\n",
+    "2. `total_missing_data = df.isnull().sum().sum()`\n",
+    "    - Calculates total missing values in the DataFrame.\n",
+    "\n",
+    "3. `missing_proportion = (missing_data / len(df)) * 100`\n",
+    "    - Calculates missing values proportion per column as a percentage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import missingno as msno\n",
+    "msno.bar(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 11\n",
     "**Explanation** \n",
     "1. `random_observation = df.sample()` \n",
@@ -318,41 +344,28 @@
    "source": [
     "### 16\n",
     "**Explanation** \n",
-    "1. `df.loc[df['type'] == 'Movie', 'duration'] = df[df['type'] == 'Movie']['duration'].str.replace(' min', '').astype(float)`\n",
-    "   - Convert the duration to minutes for entries of type \"Movie\"\n",
-    "1. `print(df[df['type'] == 'Movie'][['type', 'duration']])` \n",
-    "   - Display the 'type' and 'duration' columns for entries of type \"Movie\"\n"
+    "1. `df.loc[df['type'] == 'Movie', 'duration'].fillna('0 min')`\n",
+    "   - Fill missing values in the 'duration' column for movies ('Movie') with the string '0 min'\n",
+    "2. `df.loc[df['type'] == 'Movie', 'duration'] = ...` \n",
+    "   - Assign the filled values (or existing values if they are not missing) to the 'duration' column only for movies ('Movie')\n",
+    "\n",
+    "\n",
+    "1. `df.loc[df['type'] == 'Movie', 'duration'].str.replace(' min', '')`\n",
+    "   - Remove the text ' min' from each value in the 'duration' column for movies ('Movie')\n",
+    "2. `.astype(int)` \n",
+    "   - Convert the values in the 'duration' column (which are now strings representing numbers) to integers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       type duration\n",
-      "0     Movie     90.0\n",
-      "6     Movie     91.0\n",
-      "7     Movie    125.0\n",
-      "9     Movie    104.0\n",
-      "12    Movie    127.0\n",
-      "...     ...      ...\n",
-      "8801  Movie     96.0\n",
-      "8802  Movie    158.0\n",
-      "8804  Movie     88.0\n",
-      "8805  Movie     88.0\n",
-      "8806  Movie    111.0\n",
-      "\n",
-      "[6131 rows x 2 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.loc[df['type'] == 'Movie', 'duration'] = df[df['type'] == 'Movie']['duration'].str.replace(' min', '').astype(float)\n",
-    "print(df[df['type'] == 'Movie'][['type', 'duration']])"
+    "df.loc[df['type'] == 'Movie', 'duration'] = df.loc[df['type'] == 'Movie', 'duration'].fillna('0 min')\n",
+    "df.loc[df['type'] == 'Movie', 'duration'] = df.loc[df['type'] == 'Movie', 'duration'].str.replace(' min', '').astype(int)\n",
+    "\n",
+    "print(df[df['type'] == 'Movie'][['type', 'duration']])\n"
    ]
   },
   {
@@ -380,8 +393,9 @@
     }
    ],
    "source": [
-    "df.loc[df['type'] == 'TV Show', 'duration'] = df[df['type'] == 'TV Show']['duration'].str.replace(' Seasons?', '').astype(float)\n",
-    "print(df[df['type'] == 'TV Show'][['type', 'duration']])\n"
+    "df.loc[df['type'] == 'TV Show', 'duration'] = df.loc[df['type'] == 'TV Show', 'duration'].str.replace(r'\\D', '').astype(int)\n",
+    "\n",
+    "print(df['duration'])"
    ]
   },
   {
