[Créer Markdown du 18]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -386,10 +386,10 @@
    "source": [
     "### 18\n",
     "**Explanation** \n",
-    "1. `df['date_added'] = pd.to_datetime(df['date_added'], errors='coerce')`\n",
-    "   - Convert the date_added column to DateTime type\n",
-    "1. `print(\"date_added : \", df.dtypes['date_added'])` \n",
-    "   - Display the data type of the date_added column."
+    "1. `df['listed_in'] = ...` \n",
+    "   - Replace the values in the 'listed_in' column with the new lists of genres obtained after splitting\n",
+    "2. `df['listed_in'].str.split(', ')`\n",
+    "   - Apply the split(', ') method to each element in the 'listed_in' column. This splits each string into a list of substrings using ', ' as a separator\n"
    ]
   },
   {
