[Créer code du 19]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -421,6 +421,41 @@
     "\n",
     "print(df['listed_in'])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 19\n",
+    "**Explanation** \n",
+    "1. `df['listed_in'] = ...` \n",
+    "   - Replace the values in the 'listed_in' column with the new lists of genres obtained after splitting\n",
+    "2. `df['listed_in'].str.split(', ')`\n",
+    "   - Apply the split(', ') method to each element in the 'listed_in' column. This splits each string into a list of substrings using ', ' as a separator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Afficher les valeurs uniques de la variable 'type' avec leur nombre d'occurrences\n",
+    "print(\"Valeurs uniques de 'type' avec leur nombre d'occurrences:\")\n",
+    "print(df['type'].value_counts())\n",
+    "\n",
+    "print(\"\\nValeurs uniques de 'country' avec leur nombre d'occurrences:\")\n",
+    "print(df['country'].value_counts())\n",
+    "\n",
+    "print(\"\\nValeurs uniques de 'release_year' avec leur nombre d'occurrences:\")\n",
+    "print(df['release_year'].value_counts())\n",
+    "\n",
+    "print(\"\\nValeurs uniques de 'rating' avec leur nombre d'occurrences:\")\n",
+    "print(df['rating'].value_counts())\n",
+    "\n",
+    "print(\"\\nValeurs uniques de 'listed_in' avec leur nombre d'occurrences:\")\n",
+    "print(df['listed_in'].explode().value_counts())"
+   ]
   }
  ],
  "metadata": {
