[Créer Markdown du 19]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -428,10 +428,8 @@
    "source": [
     "### 19\n",
     "**Explanation** \n",
-    "1. `df['listed_in'] = ...` \n",
-    "   - Replace the values in the 'listed_in' column with the new lists of genres obtained after splitting\n",
-    "2. `df['listed_in'].str.split(', ')`\n",
-    "   - Apply the split(', ') method to each element in the 'listed_in' column. This splits each string into a list of substrings using ', ' as a separator"
+    "1. `df['type'].value_counts()` \n",
+    "   - This method counts the number of occurrences of each unique value in the 'type' column of the DataFrame df and returns the results as a series. Each unique value of the 'type' column is an index of the series, and the number of occurrences of that value is the value associated with that index."
    ]
   },
   {
@@ -440,21 +438,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Afficher les valeurs uniques de la variable 'type' avec leur nombre d'occurrences\n",
-    "print(\"Valeurs uniques de 'type' avec leur nombre d'occurrences:\")\n",
+    "print(\"Unique values of 'type' with their occurrences:\")\n",
     "print(df['type'].value_counts())\n",
     "\n",
-    "print(\"\\nValeurs uniques de 'country' avec leur nombre d'occurrences:\")\n",
+    "print(\"\\nUnique values of 'country' with their occurrences:\")\n",
     "print(df['country'].value_counts())\n",
     "\n",
-    "print(\"\\nValeurs uniques de 'release_year' avec leur nombre d'occurrences:\")\n",
+    "print(\"\\nUnique values of 'release_year' with their occurrences:\")\n",
     "print(df['release_year'].value_counts())\n",
     "\n",
-    "print(\"\\nValeurs uniques de 'rating' avec leur nombre d'occurrences:\")\n",
+    "print(\"\\nUnique values of 'rating' with their occurrences:\")\n",
     "print(df['rating'].value_counts())\n",
     "\n",
-    "print(\"\\nValeurs uniques de 'listed_in' avec leur nombre d'occurrences:\")\n",
-    "print(df['listed_in'].explode().value_counts())"
+    "print(\"\\nUnique values of 'listed_in' with their occurrences:\")\n",
+    "print(df['listed_in'].explode().value_counts())\n"
    ]
   }
  ],
