[Créer code 20] [Créer Markdown du 20]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -453,6 +453,55 @@
     "print(\"\\nUnique values of 'listed_in' with their occurrences:\")\n",
     "print(df['listed_in'].explode().value_counts())\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 20\n",
+    "**This code counts the number of works directed by each director in the 'director' column, and then identifies directors who have directed more than one work.** \n",
+    "1. `directors_count = df['director'].value_counts()` \n",
+    "   - This line counts the occurrences of each director in the 'director' column and stores the results in the 'directors_count' variable\n",
+    "1. `prolific_directors = directors_count[directors_count > 1]` \n",
+    "   - This line filters the directors who have directed more than one work by selecting values from 'directors_count' that are greater than 1. These directors are stored in the 'prolific_directors' variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Directors who have produced more than one work:\n",
+      "director\n",
+      "Rajiv Chilaka                 19\n",
+      "Raúl Campos, Jan Suter        18\n",
+      "Marcus Raboy                  16\n",
+      "Suhas Kadav                   16\n",
+      "Jay Karas                     14\n",
+      "                              ..\n",
+      "Abhijit Panse                  2\n",
+      "Jose Manuel Colón              2\n",
+      "Rhys Thomas                    2\n",
+      "Rizal Mantovani                2\n",
+      "Nawapol Thamrongrattanarit     2\n",
+      "Name: count, Length: 867, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "directors_count = df['director'].value_counts()\n",
+    "prolific_directors = directors_count[directors_count > 1]\n",
+    "\n",
+    "if not prolific_directors.empty:\n",
+    "    print(\"Directors who have produced more than one work:\")\n",
+    "    print(prolific_directors)\n",
+    "else:\n",
+    "    print(\"No director has produced more than one work.\")"
+   ]
   }
  ],
  "metadata": {
