[Créer code du 21] [Créer markdown du 21]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -468,30 +468,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Directors who have produced more than one work:\n",
-      "director\n",
-      "Rajiv Chilaka                 19\n",
-      "Raúl Campos, Jan Suter        18\n",
-      "Marcus Raboy                  16\n",
-      "Suhas Kadav                   16\n",
-      "Jay Karas                     14\n",
-      "                              ..\n",
-      "Abhijit Panse                  2\n",
-      "Jose Manuel Colón              2\n",
-      "Rhys Thomas                    2\n",
-      "Rizal Mantovani                2\n",
-      "Nawapol Thamrongrattanarit     2\n",
-      "Name: count, Length: 867, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "directors_count = df['director'].value_counts()\n",
     "prolific_directors = directors_count[directors_count > 1]\n",
@@ -501,6 +480,36 @@
     "    print(prolific_directors)\n",
     "else:\n",
     "    print(\"No director has produced more than one work.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 21\n",
+    "**This code determines the year with the highest number of additions to the catalog and displays that year along with the corresponding number of additions.** \n",
+    "\n",
+    "1. `prolific_years = df['release_year'].value_counts()`\n",
+    "    - This line counts the number of works released for each year in the 'release_year' column and stores the results in the 'prolific_years' variable. This gives a count of the number of works released per year\n",
+    "2. `most_prolific_year = prolific_years.idxmax()`\n",
+    "    - This line retrieves the year with the highest number of additions to the catalog using the idxmax() method on the 'prolific_years' variable. This returns the index of the year with the maximum value\n",
+    "3. `number_of_films = prolific_years.max()`\n",
+    "    - This line retrieves the maximum number of additions to the catalog using the max() method on the 'prolific_years' variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prolific_years = df['release_year'].value_counts()\n",
+    "\n",
+    "most_prolific_year = prolific_years.idxmax()\n",
+    "number_of_films = prolific_years.max()\n",
+    "\n",
+    "print(f\"Year with the most additions to the catalog: {most_prolific_year}\")\n",
+    "print(f\"Number of additions to the catalog in that year: {number_of_films}\")"
    ]
   }
  ],
