[Créer code du 23 a] [Créer markdown du 23 a]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -511,6 +511,79 @@
     "print(f\"Year with the most additions to the catalog: {most_prolific_year}\")\n",
     "print(f\"Number of additions to the catalog in that year: {number_of_films}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 22\n",
+    "**This code identifies the year with the highest number of TV shows added to the catalog, as well as the number of TV shows added in that year**\n",
+    "\n",
+    "1. `tv_show_prolific_years = df.loc[df['type'] == 'TV Show', 'release_year'].value_counts()`\n",
+    "    - This line filters the entries in the 'release_year' column for which the type is \"TV Show\", then counts the number of TV shows for each year. The results are stored in the 'tv_show_prolific_years' variable, which contains a count of the number of TV shows added per year.\n",
+    "2. `tv_show_most_prolific_year = tv_show_prolific_years.idxmax()`\n",
+    "    - This line retrieves the year with the highest number of TV shows added to the catalog using the idxmax() method on the 'tv_show_prolific_years' variable. This returns the index of the year with the maximum value.\n",
+    "3. `number_of_tv_shows = tv_show_prolific_years.max()`\n",
+    "    - This line retrieves the maximum number of TV shows added to the catalog using the max() method on the 'tv_show_prolific_years' variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tv_show_prolific_years = df.loc[df['type'] == 'TV Show','release_year'].value_counts()\n",
+    "\n",
+    "tv_show_most_prolific_year = tv_show_prolific_years.idxmax()\n",
+    "number_of_tv_shows = tv_show_prolific_years.max()\n",
+    "\n",
+    "print(f\"Year with the most TV shows added to the catalog: {tv_show_most_prolific_year}\")\n",
+    "print(f\"Number of additions to the catalog in that year: {number_of_tv_shows}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 23 a\n",
+    "**This code creates a bar chart to represent the distribution of different types of works in the DataFrame.**\n",
+    "\n",
+    "1. `import matplotlib.pyplot as plt`: Imports the matplotlib.pyplot module for plotting graphs.\n",
+    "2. `cmap = plt.get_cmap('viridis')`: Creates a 'viridis' colormap using Matplotlib's get_cmap() function. This sets the colors used in the graph.\n",
+    "3. `type_counts = df['type'].value_counts()`: Counts the number of works of each type in the 'type' column of the DataFrame and stores the results in the 'type_counts' variable.\n",
+    "4. `plt.figure(figsize=(3, 6))`: Creates a new figure with a size of 3 inches wide and 6 inches tall.\n",
+    "5. `type_counts.plot(kind='bar', color=[cmap(0.2), cmap(0.8)])`: Plots a bar chart using the values in 'type_counts'. The colors of the bars are set using the 'viridis' colormap. The color of the first bar corresponds to the color at 20% of the 'viridis' color scale, and the color of the second bar corresponds to the color at 80% of the scale.\n",
+    "6. `plt.title(\"Distribution of types of works\")`: Adds a title to the graph.\n",
+    "7. `plt.xlabel(\"Type of work\")`: Adds a label to the x-axis.\n",
+    "8. `plt.ylabel(\"Number of works\")`: Adds a label to the y-axis.\n",
+    "9. `plt.xticks(rotation=0)`: Rotates the x-axis labels to 0 degrees.\n",
+    "10. `plt.grid(axis='y', linestyle='--', alpha=0.7)`: Adds a grid to the y-axes with a dashed line style and transparency of 0.7.\n",
+    "11. `plt.tight_layout()`: Adjusts the layout of the graph to avoid the title being cut off.\n",
+    "12. `plt.show()`: Displays the graph."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "cmap = plt.get_cmap('viridis')\n",
+    "\n",
+    "type_counts = df['type'].value_counts()\n",
+    "\n",
+    "plt.figure(figsize=(4, 5))\n",
+    "type_counts.plot(kind='bar', color=[cmap(0.5), cmap(0.3)])  \n",
+    "plt.title(\"Distribution of types\")\n",
+    "plt.xlabel(\"Type\")\n",
+    "plt.ylabel(\"Number\")\n",
+    "plt.xticks(rotation=0)\n",
+    "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
