[Créer code du 23 b] [Créer Markdown du 23 b]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -584,6 +584,78 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 23 b\n",
+    "1. **Imports**:\n",
+    "   - `import numpy as np`: Imports the NumPy module for mathematical operations.\n",
+    "   \n",
+    "2. **Counting works by country**:\n",
+    "   - `top_countries = df['country'].value_counts().head(15)`: Counts the number of works by country and selects the top 15 countries with the highest number of works.\n",
+    "   - `other_countries = df['country'].value_counts().tail(-15)`: Counts the number of works for countries other than the top 15.\n",
+    "   - `other_countries_sum = other_countries.sum()`: Calculates the sum of the number of works for countries other than the top 15.\n",
+    "   \n",
+    "3. **Creating the data series**:\n",
+    "   - `all_countries = pd.concat([top_countries, pd.Series(other_countries_sum, index=['Other Countries'])])`: Combines the top 15 countries with the sum of other countries into a single data series.\n",
+    "   \n",
+    "4. **Sorting countries in descending order**:\n",
+    "   - `all_countries_sorted = all_countries.sort_values(ascending=False)`: Sorts the countries in descending order based on the number of works.\n",
+    "   \n",
+    "5. **Creating the colormap**:\n",
+    "   - `cmap = plt.get_cmap('viridis')`: Gets a 'viridis' colormap from Matplotlib.\n",
+    "   - `colors = cmap(np.linspace(0, 1, len(all_countries_sorted)))`: Generates a list of colors based on the number of countries.\n",
+    "   \n",
+    "6. **Creating the bar chart**:\n",
+    "   - `plt.figure(figsize=(12, 6))`: Creates a new figure with a size of 12 inches wide and 6 inches high.\n",
+    "   - `all_countries_sorted.plot(kind='bar', color=colors)`: Plots a bar chart using the sorted data and generated colors.\n",
+    "   \n",
+    "7. **Adding titles and labels**:\n",
+    "   - `plt.title(\"Distribution of works by country\")`: Adds a title to the chart.\n",
+    "   - `plt.xlabel(\"Country\")`: Adds a label to the x-axis.\n",
+    "   - `plt.ylabel(\"Number of works\")`: Adds a label to the y-axis.\n",
+    "   - `plt.xticks(rotation=45)`: Rotates the x-axis labels for better readability.\n",
+    "   \n",
+    "8. **Adding gridlines and adjusting layout**:\n",
+    "   - `plt.grid(axis='y', linestyle='--', alpha=0.7)`: Adds gridlines to the y-axis with a dashed line style and 0.7 transparency.\n",
+    "   - `plt.tight_layout()`: Adjusts the layout of the chart to prevent the title from being cut off.\n",
+    "   \n",
+    "9. **Displaying the chart**:\n",
+    "   - `plt.show()`: Displays the chart."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "top_countries = df['country'].value_counts().head(15)\n",
+    "\n",
+    "other_countries = df['country'].value_counts().tail(-15)\n",
+    "other_countries_sum = other_countries.sum()\n",
+    "\n",
+    "all_countries = pd.concat([top_countries, pd.Series(other_countries_sum, index=['Other Countries'])])\n",
+    "\n",
+    "all_countries_sorted = all_countries.sort_values(ascending=False)\n",
+    "\n",
+    "cmap = plt.get_cmap('viridis')\n",
+    "colors = cmap(np.linspace(0, 1, len(all_countries_sorted)))\n",
+    "\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "all_countries_sorted.plot(kind='bar', color=colors)\n",
+    "plt.title(\"Distribution of works by country\")\n",
+    "plt.xlabel(\"Country\")\n",
+    "plt.ylabel(\"Number of works\")\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
