[Créer code du 23 c] [Créer markdown du 23 c]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -656,6 +656,33 @@
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 23 c\n",
+    "**Counting the number of works per country**\n",
+    "1. `country_counts = df['country'].value_counts()`\n",
+    "    - This line counts the number of works for each country in the 'country' column and stores the results in the variable 'country_counts'. Each unique country value serves as the index of the series, while the values correspond to the number of works associated with each country.\n",
+    "**Number of unique values in the 'country' column**\n",
+    "2. `different_countries = df['country'].nunique()`\n",
+    "    - This line counts the number of unique values in the 'country' column using the nunique() method and stores the result in the variable 'different_countries'. This gives the number of different countries present in the 'country' column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country_counts = df['country'].value_counts()\n",
+    "print(country_counts)\n",
+    "\n",
+    "different_countries = df['country'].nunique()\n",
+    "\n",
+    "print(\"\\nNumber of different values in the 'country' column:\", different_countries)"
+   ]
   }
  ],
  "metadata": {
