[Modifer code 23c] [Modifier markdown du 23 c]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -661,7 +661,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 23 c\n",
     "**Counting the number of works per country**\n",
     "1. `country_counts = df['country'].value_counts()`\n",
     "    - This line counts the number of works for each country in the 'country' column and stores the results in the variable 'country_counts'. Each unique country value serves as the index of the series, while the values correspond to the number of works associated with each country.\n",
@@ -682,6 +681,51 @@
     "different_countries = df['country'].nunique()\n",
     "\n",
     "print(\"\\nNumber of different values in the 'country' column:\", different_countries)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 23 c\n",
+    "\n",
+    "1. `top_years = df['release_year'].value_counts().head(15)`: Counts the occurrences of each release year in the 'release_year' column, then selects the top 15 years with the highest counts.\n",
+    "2. `other_years = df['release_year'].value_counts().tail(-15)`: Counts the occurrences of each release year, excluding the top 15 years, then selects the rest.\n",
+    "3. `other_years_sum = other_years.sum()`: Calculates the total count of works for the other years.\n",
+    "4. `all_years = pd.concat([top_years, pd.Series(other_years_sum, index=['Other Years'])])`: Concatenates the top years and the sum of other years into a single DataFrame, with the label 'Other Years'.\n",
+    "5. `all_years = all_years.sort_values(ascending=False)`: Sorts the years in descending order based on the number of works.\n",
+    "6. `cmap = plt.get_cmap('viridis')`: Retrieves the 'viridis' colormap.\n",
+    "7. `colors = cmap(np.linspace(0, 1, len(all_years)))`: Generates a range of colors from the colormap corresponding to the number of years.\n",
+    "8. Plot the bar chart with the sorted data, using the colors generated.\n",
+    "9. Adds titles, labels, and grid lines to the plot for clarity.\n",
+    "10. Displays the plot."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_years = df['release_year'].value_counts().head(15)\n",
+    "other_years = df['release_year'].value_counts().tail(-15)\n",
+    "other_years_sum = other_years.sum()\n",
+    "all_years = pd.concat([top_years, pd.Series(other_years_sum, index=['Other Years'])])\n",
+    "\n",
+    "all_years = all_years.sort_values(ascending=False)\n",
+    "\n",
+    "cmap = plt.get_cmap('viridis')\n",
+    "colors = cmap(np.linspace(0, 1, len(all_years)))\n",
+    "\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "all_years.plot(kind='bar', color=colors)\n",
+    "plt.title(\"Distribution of works by years\")\n",
+    "plt.xlabel(\"Years\")\n",
+    "plt.ylabel(\"Number of works\")\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
   }
  ],
