[Créer code du 23 g] [ Créer markdown du 23g]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -884,6 +884,52 @@
     "plt.grid(False)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 23 g\n",
+    "1. **Creating the Plot:**\n",
+    "   - The code creates a figure with a size of 18x5 inches for the plot using `plt.figure(figsize=(18,5))`.\n",
+    "\n",
+    "2. **Counting Categories:**\n",
+    "   - The `explode()` method is applied to the 'listed_in' column to split the comma-separated genres into separate rows.\n",
+    "   - Then, the `value_counts()` method counts the occurrences of each genre category.\n",
+    "\n",
+    "3. **Plotting the Bar Chart:**\n",
+    "   - A bar chart of genre categories is plotted using `plot(kind='bar', color='blue')`.\n",
+    "   - Each bar represents the count of works in a specific genre category.\n",
+    "\n",
+    "4. **Adding Title and Labels:**\n",
+    "   - A title ('Distribution of Works by Genre') and axis labels ('Genres' for x-axis and 'Number of Works' for y-axis) are added to the plot using `plt.title()`, `plt.xlabel()`, and `plt.ylabel()` functions, respectively.\n",
+    "\n",
+    "5. **Turning off Grid Lines:**\n",
+    "   - Grid lines are turned off for better visualization using `plt.grid(False)`.\n",
+    "\n",
+    "6. **Showing the Plot:**\n",
+    "   - Finally, the plot is displayed using `plt.show()`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20,5))\n",
+    "\n",
+    "categories = df['listed_in'].explode().value_counts()\n",
+    "\n",
+    "categories.plot(kind='bar', color='blue')\n",
+    "\n",
+    "plt.title('Distribution of Works by Genre')\n",
+    "plt.xlabel('Genres')\n",
+    "plt.ylabel('Number of Works')\n",
+    "\n",
+    "plt.grid(False)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
