--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -2121,6 +2121,32 @@
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 24. Prenez soin d’observer et analyser tous vos graphiques.\n",
+    "Que pouvez-vous dire sur vos données ?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Avec plus de 8000 observations, la base de donnée n'est pas gigantestque.\n",
+    "Cependant, il y a quelques caractéristiques problématiques.\n",
+    "\n",
+    "* Certaine données sont manquantes.\n",
+    "* Il y a de forte disparités dans certaine variables.\n",
+    "\n",
+    "Par exemple:<br>Une écrasante majorité des production est Etats-Uniène.\n",
+    "Par ailleurs, de très nombreux pays ont un volume de production très similaire.\n",
+    "\n",
+    "Il faut donc réussir à représenter à la fois de grands écarts et des très petites variations sur un grand nombre de variables.\n",
+    "\n",
+    "Une piste à exploitée est l'utilisation d'echelle logarithmique pour representer simultanément  des valeurs très disparates."
+   ]
   }
  ],
  "metadata": {
